fix align of text in langBox

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,9 +22,19 @@ body {
   background: var(--white-primary);
   font-family: 'Maza', sans-serif;
   font-size: 16px;
+  line-height: 1.5;
   text-rendering: optimizeLegibility;
+  /* text-rendering: geometricPrecision; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+
+  /* -webkit-text-size-adjust: none; */
+
+  /* -webkit-font-feature-settings: 'kern' 1; */
 }
 
 button {
